# bq-schema

./: .gitignore  .pylintrc  LICENSE  README.md  codecov.yml  project-definition.json  pyproject.toml  tasks.py
.github/workflows/: python-package.yml  python-release.yml
bq_schema/: __init__.py  bigquery_table.py  dataclass_converter.py  row_transformer.py  schema_converter.py
bq_schema/cli/: bigquery_connection.py  convert_table.py  migrate_tables.py
bq_schema/migration/: schema_diff.py  table_finder.py
bq_schema/types/: big_query_types.py  type_mapping.py  type_parser.py
bq_schema_placeholder/: __init__.py  bigquery_table.py  dataclass_converter.py  row_transformer.py  schema_converter.py
bq_schema_placeholder/cli/: convert_table.py  migrate_tables.py
bq_schema_placeholder/migration/: table_finder.py
bq_schema_placeholder/types/: big_query_field_modes.py  big_query_types.py  column_description.py  type_mapping.py
bq_schema_policy_tags/: __init__.py  bigquery_table.py  dataclass_converter.py  schema_converter.py
bq_schema_policy_tags/cli/: bigquery_connection.py  convert_table.py  migrate_tables.py
bq_schema_policy_tags/migration/: models.py  schema_diff.py  table_finder.py
bq_schema_policy_tags/types/: __init__.py  type_parser.py
tests/: test_dataclass_converter.py  test_row_transformer.py  test_schema_converter.py
tests/migration/: test_schema_diff.py  test_table_finder.py
tests/migration/tables/: abstract_table.py  first_table.py
tests/migration/tables/nested_modules/: second_table.py
