[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.scripts]
convert-table = "bq_schema_policy_tags.cli.convert_table:cli"
migrate-tables = "bq_schema_policy_tags.cli.migrate_tables:cli"

[tool.flit.metadata]
module = "bq_schema_policy_tags"
dist-name = "bq-schema-policy-tags"
author = "Davy van der Horst"
home-page = "https://github.com/DVDH0/bq-schema-policy-tags"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "google-cloud-bigquery>=2,<3",
    "dacite==1.5.1"
]
requires-python = ">=3.7"

[tool.flit.metadata.requires-extra]
develop = [
    "invoke==1.4.1"
]
test = [
    "black==22.3.0",
    "isort==5.6.4",
    "mypy==0.931",
    "pylint==2.8.3",
    "pytest==7.0.1",
    "pytest-cov==3.0.0"
]
