[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.scripts]
convert-table = "bq_schema.cli.convert_table:cli"
migrate-tables = "bq_schema.cli.migrate_tables:cli"

[tool.flit.metadata]
module = "bq_schema"
dist-name="bq-schema"
author = "Limehome GmbH"
author-email = "raphael.brand@limehome.de"
home-page = "https://github.com/limehome/bq-schema"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "google-cloud-bigquery>=3,<4",
    "dacite==1.9.2"
]
requires-python = ">=3.9"

[tool.flit.metadata.requires-extra]
develop = [
    "invoke==2.2.0"
]
test = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.16.0",
    "pylint==3.3.7",
    "pytest==8.4.0",
    "pytest-cov==6.1.1"
]
